; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_detelecine.c_pullup_preinit_context.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_detelecine.c_pullup_preinit_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pullup_context = type { i32, i8*, i8*, i8*, i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pullup_preinit_context(%struct.pullup_context* %0) #0 {
  %2 = alloca %struct.pullup_context*, align 8
  store %struct.pullup_context* %0, %struct.pullup_context** %2, align 8
  %3 = load %struct.pullup_context*, %struct.pullup_context** %2, align 8
  %4 = getelementptr inbounds %struct.pullup_context, %struct.pullup_context* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = call i8* @calloc(i32 %5, i32 4)
  %7 = load %struct.pullup_context*, %struct.pullup_context** %2, align 8
  %8 = getelementptr inbounds %struct.pullup_context, %struct.pullup_context* %7, i32 0, i32 5
  store i8* %6, i8** %8, align 8
  %9 = load %struct.pullup_context*, %struct.pullup_context** %2, align 8
  %10 = getelementptr inbounds %struct.pullup_context, %struct.pullup_context* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = call i8* @calloc(i32 %11, i32 4)
  %13 = load %struct.pullup_context*, %struct.pullup_context** %2, align 8
  %14 = getelementptr inbounds %struct.pullup_context, %struct.pullup_context* %13, i32 0, i32 4
  store i8* %12, i8** %14, align 8
  %15 = load %struct.pullup_context*, %struct.pullup_context** %2, align 8
  %16 = getelementptr inbounds %struct.pullup_context, %struct.pullup_context* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = call i8* @calloc(i32 %17, i32 4)
  %19 = load %struct.pullup_context*, %struct.pullup_context** %2, align 8
  %20 = getelementptr inbounds %struct.pullup_context, %struct.pullup_context* %19, i32 0, i32 3
  store i8* %18, i8** %20, align 8
  %21 = load %struct.pullup_context*, %struct.pullup_context** %2, align 8
  %22 = getelementptr inbounds %struct.pullup_context, %struct.pullup_context* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = call i8* @calloc(i32 %23, i32 4)
  %25 = load %struct.pullup_context*, %struct.pullup_context** %2, align 8
  %26 = getelementptr inbounds %struct.pullup_context, %struct.pullup_context* %25, i32 0, i32 2
  store i8* %24, i8** %26, align 8
  %27 = load %struct.pullup_context*, %struct.pullup_context** %2, align 8
  %28 = getelementptr inbounds %struct.pullup_context, %struct.pullup_context* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = call i8* @calloc(i32 %29, i32 4)
  %31 = load %struct.pullup_context*, %struct.pullup_context** %2, align 8
  %32 = getelementptr inbounds %struct.pullup_context, %struct.pullup_context* %31, i32 0, i32 1
  store i8* %30, i8** %32, align 8
  ret void
}

declare dso_local i8* @calloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
